Release 0.5 - Alpha Release:
1. Supports only TD-12.
2. Can load files and save new files with new ordered kits bank.
3. Original kit location is shown in the left list. 
4. Does not support MIDI dump.
5. Checked only on Microsoft Windows XP.

Release 0.7 - Alpha Release:
* The user can select MIDI source and destination ports.
* The user can upload kits to the module.
* There is no indication that the kits are downloaded.
* There is no indication that the download has finished.

Release 0.7 - Alpha 2 Release:
* Added browse and save in the menu bar.
* Added multi selection of kits in the input list as well as to add more than one kit
	to the output list.
* Added information area and status bar.
	- Showing which kit is downloaded to the module.
* Supporting TD-6
	- The user can choose the output module
**************************************************
!!! TD-6 options were not tested with a module !!!
**************************************************

Release 0.8-alpha_1:
* New look
* Added device id to the midi source
* Connect button gets the device info (and type)
* Receiving kits from a connected device

known bugs:
- disconnect doesn't work
- if you stop sending from the module (pressing cancel while sending),
	then JVDrums does not receive kits anymore and you need to restart it
- configuration is not saved as well as last browse location
- some information in the status bar is not displayed yet

* Soon: TD-10 support

Release 1.0 alpha-1
* disconnect button works
* resending (after stopping) works
* statusbar shows information while receiving message
* supporting TD-10EXP